@startuml
skinparam linetype ortho

class Personne {
    <<Base>>
}

class Roturier {
    Hérite de Personne
    Appartient à : Village
}

class Paysan {
    Hérite de Roturier
}

class Noble {
    Hérite de Personne
    Possède armée : Soldat
    Possède : Village
    Lance : Tentative de Vassalisation et Immigration
    Attaquant/Défenseur : Guerre
}

class Seigneur {
    Hérite de Noble
    A comme vassaux : Noble
}

class Soldat{
   Appartient à : Noble
}

class Village {
    Contient habitants : Roturier, Paysan
}

class Evenement {
    <<Base>>
}

class RécolteAbondante {
    Hérite de Evenement
}

class Épidémie {
    Hérite de Evenement
}

class Guerre {
    Attaque et défense
}

class Immigration {
    Appliquée à : Noble, Seigneur
Lancer par : Noble, Seigneur
}

class GameController {
    Gère : Village, Noble, Seigneur
}

class Vassalisation{
    Appliquée à : Noble, Seigneur
    Lancer par : Noble, Seigneur
}

Vassalisation <|-- Noble
Vassalisation <|-- Seigneur
Vassalisation <|-- GameController
Personne <|-- Roturier
Roturier <|-- Paysan
Personne <|-- Noble
Noble <|-- Seigneur
Noble <|-- Soldat
Noble <|-- Village
Seigneur <|-- Noble 
Village <|-- Roturier
Village <|-- Paysan
Evenement <|-- RécolteAbondante
Evenement <|-- Épidémie 
Seigneur <|-- Guerre
Noble <|-- Guerre
Immigration <|-- Noble 
Immigration <|-- Seigneur
Roturier <|-- Immigration 
GameController <|-- Village
GameController <|-- Noble
GameController <|-- Seigneur
@enduml